[package]
name = "bonsaimq"
version = "0.1.0"
edition = "2021"

[dependencies]
bonsaidb = { version = "0.4.1", features = ["local", "local-async", "local-instrument"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
time = "0.3.9"
tracing = "0.1.34"
tracing-futures = "0.2.5"

[dev-dependencies]
color-eyre = "0.6.1"
tokio = { version = "1.18.0", features = ["full"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[profile.release]
lto = true
debug = true
